// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateHldMarkdown > matches the G1 branch-office snapshot 1`] = `
"# G1 Branch Office — High-Level Design

## Overview

Branch office with dual HSRP routers, two access switches, and an edge firewall serving three VLANs.

**Pattern:** branch-office

## Assumptions

No assumptions were recorded for this design.

## Topology

### Devices

| Device | Role | Vendor | Model | Zone |
| --- | --- | --- | --- | --- |
| rtr-01 | router | cisco-ios | — | — |
| rtr-02 | router | cisco-ios | — | — |
| sw-01 | access-switch | cisco-ios | — | — |
| sw-02 | access-switch | cisco-ios | — | — |
| fw-01 | firewall | fortinet-fortigate | — | — |

### Links

| A | B | Kind | Label |
| --- | --- | --- | --- |
| fw-01:eth0/0 | rtr-01:eth0/0 | ethernet | Firewall uplink |
| fw-01:eth0/1 | rtr-02:eth0/0 | ethernet | Firewall uplink |
| rtr-01:eth0/1 | sw-01:eth0/0 | ethernet | Access trunk |
| rtr-02:eth0/1 | sw-02:eth0/0 | ethernet | Access trunk |
| sw-01:eth0/1 | sw-02:eth0/1 | port-channel | Switch interlink |

## IP Plan

### Segments (VLAN table)

| Name | VLAN ID | CIDR | Gateway | Purpose | DHCP |
| --- | --- | --- | --- | --- | --- |
| corp-data | 10 | 10.30.2.0/24 | 10.30.2.1 | user | Yes |
| voice | 20 | 10.30.3.0/24 | 10.30.3.1 | voice | Yes |
| guest | 30 | 10.30.4.0/24 | 10.30.4.1 | guest | Yes |

### Device Addressing

| Device | Mgmt IP | Loopback |
| --- | --- | --- |
| rtr-01 | 10.30.0.2 | 10.30.1.0/32 |
| rtr-02 | 10.30.0.3 | 10.30.1.1/32 |
| sw-01 | 10.30.0.4 | — |
| sw-02 | 10.30.0.5 | — |
| fw-01 | 10.30.0.6 | 10.30.1.2/32 |

### Interfaces

| Device | Interface | Address | Description |
| --- | --- | --- | --- |
| rtr-01 | eth0/0 | 10.30.1.5/31 | Firewall uplink to fw-01 |
| rtr-01 | eth0/1 | Trunk (VLANs: 10, 20, 30) | Access trunk to sw-01 |
| rtr-02 | eth0/0 | 10.30.1.7/31 | Firewall uplink to fw-01 |
| rtr-02 | eth0/1 | Trunk (VLANs: 10, 20, 30) | Access trunk to sw-02 |
| sw-01 | eth0/0 | Trunk (VLANs: 10, 20, 30) | Access trunk to rtr-01 |
| sw-01 | eth0/1 | Trunk (VLANs: 10, 20, 30) | Switch interlink to sw-02 |
| sw-02 | eth0/0 | Trunk (VLANs: 10, 20, 30) | Access trunk to rtr-02 |
| sw-02 | eth0/1 | Trunk (VLANs: 10, 20, 30) | Switch interlink to sw-01 |
| fw-01 | eth0/0 | 10.30.1.4/31 | Firewall uplink to rtr-01 |
| fw-01 | eth0/1 | 10.30.1.6/31 | Firewall uplink to rtr-02 |

## Routing

- **IGP:** static
- **First-hop redundancy:** hsrp
- **Default route:** 0.0.0.0/0

## Security Zones

No zones or zone policies are defined for this design.
"
`;

exports[`generateHldMarkdown > matches the G4 smb-flat snapshot 1`] = `
"# G4 Small Office — High-Level Design

## Overview

Single-router SMB design with one access switch and an edge firewall serving corp and guest VLANs.

**Pattern:** smb-flat

## Assumptions

No assumptions were recorded for this design.

## Topology

### Devices

| Device | Role | Vendor | Model | Zone |
| --- | --- | --- | --- | --- |
| rtr-01 | router | cisco-ios | — | — |
| sw-01 | access-switch | cisco-ios | — | — |
| fw-01 | firewall | fortinet-fortigate | — | — |

### Links

| A | B | Kind | Label |
| --- | --- | --- | --- |
| fw-01:eth0/0 | rtr-01:eth0/0 | ethernet | Firewall uplink |
| rtr-01:eth0/1 | sw-01:eth0/0 | ethernet | Access trunk |

## IP Plan

### Segments (VLAN table)

| Name | VLAN ID | CIDR | Gateway | Purpose | DHCP |
| --- | --- | --- | --- | --- | --- |
| corp | 10 | 10.40.2.0/24 | 10.40.2.1 | user | Yes |
| guest | 20 | 10.40.3.0/24 | 10.40.3.1 | guest | Yes |

### Device Addressing

| Device | Mgmt IP | Loopback |
| --- | --- | --- |
| rtr-01 | 10.40.0.2 | 10.40.1.0/32 |
| sw-01 | 10.40.0.3 | — |
| fw-01 | 10.40.0.4 | 10.40.1.1/32 |

### Interfaces

| Device | Interface | Address | Description |
| --- | --- | --- | --- |
| rtr-01 | eth0/0 | 10.40.1.3/31 | Firewall uplink to fw-01 |
| rtr-01 | eth0/1 | Trunk (VLANs: 10, 20) | Access trunk to sw-01 |
| sw-01 | eth0/0 | Trunk (VLANs: 10, 20) | Access trunk to rtr-01 |
| fw-01 | eth0/0 | 10.40.1.2/31 | Firewall uplink to rtr-01 |

## Routing

- **IGP:** static
- **First-hop redundancy:** none
- **Default route:** 0.0.0.0/0

## Security Zones

No zones or zone policies are defined for this design.
"
`;
